syntax = "proto3";

package note_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/ako10sei/auth/pkg/user_v1;user_v1";


service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc List(ListRequest) returns (ListResponse);
}

message UserInfo {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role enum = 5;
}

enum Role {
    UNKNOWN = 0;
    USER = 1;
    ADMIN = 2;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
}

message CreateRequest {
  UserInfo info = 1;
}

message CreateResponse {
  User user = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message DeleteRequest {
  int64 id = 1;
}

message ListRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListResponse {
  repeated User users = 1;
}